Fix icon spacing

--- a/src/assets/styles/icon-button.css
+++ b/src/assets/styles/icon-button.css
@@ -4,7 +4,7 @@ a.icon-button:visited {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: var(--spacing-1);
+  padding: var(--spacing-1) var(--spacing-2);
   background: transparent;
   border: none;
   border-radius: var(--border-radius-1);
